segnatura termini glossario

--- a/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_2_0_0.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_2_0_0.tex
@@ -100,7 +100,7 @@ Con il presente documento il gruppo \hx{} si impegna a sviluppare un prodotto ch
 \section{Descrizione generale}
 
 \subsection{Obiettivo del prodotto}
-Il prodotto sviluppato ha come scopo primario quello di fornire un \gloss{editor} in grado di supportare e guidare l'utente nella progettazione e nella codifica dell'applicativo desiderato e generare codice eseguibile, sulla base delle informazioni contenute nei diagrammi realizzati.
+Il prodotto sviluppato ha come scopo primario quello di fornire un editor in grado di supportare e guidare l'utente nella progettazione e nella codifica dell'applicativo desiderato e generare codice eseguibile, sulla base delle informazioni contenute nei diagrammi realizzati.
 
 In particolare, il software risulterà orientato alla realizzazione di programmi appartenenti ad uno specifico dominio applicativo: quello dei giochi da tavolo.
 
@@ -118,13 +118,13 @@ Il prodotto \proj{} si rivolge principalmente ad una categoria di utenti ben spe
 
 In particolare, è richiesto che l'utente dell'editor abbia un certo grado di familiarità con i seguenti concetti:
 \begin{itemize}
-	\item Le principali convenzioni della modellazione \gloss{UML} e, nello specifico, i diagrammi delle classi e i diagrammi delle attività.
+	\item Le principali convenzioni della modellazione UML e, nello specifico, i diagrammi delle classi e i diagrammi delle attività.
 	\item Le astrazioni e i paradigmi della programmazione orientata agli oggetti; infatti il linguaggio target generato, i diagrammi e le funzionalità offerte suggeriscono che l'architettura dell'applicativo da realizzarsi sia ben strutturata in moduli funzionali specifici e distinti.
 \end{itemize}
 Per garantire inoltre una comprensione accurata e completa dell'insieme di funzionalità implementate, il prodotto sarà corredato di un manuale utente completo delle indicazioni necessarie per poterne fruire in modo efficace.
 
 \subsection{Piattaforma di esecuzione}
-Il prodotto sviluppato risulterà fruibile da qualsiasi piattaforma desktop con operante un browser web compatibile con le tecnologie \gloss{HTML5}, \gloss{CSS3} e \gloss{JavaScript}. In particolare, l'elenco dei browser il cui supporto è garantito è contenuto nella sezione \ref{sec:reqvincolo} relativa ai requisiti di vincolo.
+Il prodotto sviluppato risulterà fruibile da qualsiasi piattaforma desktop con operante un browser web compatibile con le tecnologie HTML5, CSS3 e JavaScript. In particolare, l'elenco dei browser il cui supporto è garantito è contenuto nella sezione \ref{sec:reqvincolo} relativa ai requisiti di vincolo.
 
 \subsection{Vincoli generali}
 Si tiene conto dei seguenti vincoli:
@@ -1703,7 +1703,7 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 	\item \textbf{Descrizione}: l'attore inserisce il contenuto in codice del blocco custom;
 	\item \textbf{Precondizione}: l'attore ha selezionato un blocco custom da inserire e il sistema visualizza il form per l'inserimento dei dati;
 	\item \textbf{Postcondizione}: il sistema ha ricevuto il dato richiesto;
-	\item \textbf{Scenario principale}: l'attore deve inserire il contenuto in codice del blocco custom in \gloss{Java}, il linguaggio target di generazione del codice dell'applicativo.
+	\item \textbf{Scenario principale}: l'attore deve inserire il contenuto in codice del blocco custom in Java, il linguaggio target di generazione del codice dell'applicativo.
 \end{itemize}
 
 \paragraph{UC5.6.2: Inserimento Commento Blocco Custom}
@@ -3018,7 +3018,7 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 \hypertarget{RFO6.1}{RFO6.1} & il sistema deve visualizzare un messaggio d'errore se l'attore non ha rispettato i vincoli imposti dagli stereotipi scelti& \hyperlink{Interno}{Interno}\\
 & & \hyperref[UC7.1]{UC7.1}\\ \hline
 
-\hypertarget{RFO7}{RFO7} & il sistema riceve una richiesta http post contenente i file JSON generato dal programma utente & \hyperlink{Interno}{Interno}\\ \hline
+\hypertarget{RFO7}{RFO7} & il sistema riceve una richiesta http post contenente i file \gloss{JSON} generato dal programma utente & \hyperlink{Interno}{Interno}\\ \hline
 
 \hypertarget{RFO8}{RFO8} & il sistema genera il programma in Java & \hyperlink{Interno}{Interno}\\ \hline
 
