--- a/doc/Interni/Studio_di_fattibilita/Studio_di_fattibilita_1_0_0.tex
+++ b/doc/Interni/Studio_di_fattibilita/Studio_di_fattibilita_1_0_0.tex
@@ -48,7 +48,7 @@
 			\url{www.math.unipd.it/~tullio/IS-1/2016/Progetto/C4.pdf}, visitato il 08/02/2017;
 			\item \textbf{Capitolato d'Appalto C5}, \emph{Monolith}: an interactive bubble provider \\
 			\url{www.math.unipd.it/~tullio/IS-1/2016/Progetto/C5.pdf}, visitato il 08/02/2017;
-			\item \textbf{Capitolato d'Appalto C6}, \emph{SWEDesigner}: \gloss{editor} di diagrammi \gloss{UML} con generazione di codice \\
+			\item \textbf{Capitolato d'Appalto C6}, \emph{SWEDesigner}: editor di diagrammi UML con generazione di codice \\
 			\url{www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6.pdf}, visitato il 08/02/2017;
 		\end{itemize}
 
@@ -58,7 +58,7 @@
 	\subsection{\proj: editor di diagrammi UML con generazione di codice}
 		\subsubsection{Descrizione}
 		Lo scopo principale del capitolato è quello di realizzare un'\gloss{applicazione web} composta da almeno due disegnatori
-		ed un coordinatore, che permetta all'utente di costruire diagrammi UML rappresentativi del prodotto da svilupparsi e generi a partire da essi codice \gloss{Java} o \gloss{JavaScript}.
+		ed un coordinatore, che permetta all'utente di costruire diagrammi UML rappresentativi del prodotto da svilupparsi e generi a partire da essi codice Java o JavaScript.
 		
 		In particolare l'editor dovrebbe concentrarsi su uno specifico dominio applicativo (l'esempio fornito nel capitolato d'appalto è relativo ai software di giochi da tavolo) per andare a costituire una sorta di \gloss{framework} per la produzione della relativa famiglia di prodotti.
 
@@ -73,8 +73,7 @@
 			
 			\paragraph{Dominio tecnologico}
 			Il capitolato richiede che il sistema sia realizzato con tecnologie Web. In particolare la parte \gloss{server} deve essere realizzata in Java con il server 
-			\gloss{Tomcat} o in Javascript con il server \gloss{Node.js}. La parte \gloss{client}, invece, deve essere eseguibile in un browser \gloss{HTML5} ed utilizzare fogli di stile \gloss{CSS} per 
-			l'aspetto estetico e JavaScript per la parte attiva.
+			\gloss{Tomcat} o in Javascript con il server \gloss{Node.js}. La parte \gloss{client}, invece, deve essere eseguibile in un browser HTML5 ed utilizzare fogli di stile CSS3 per l'aspetto estetico e JavaScript per la parte attiva.
 		
 		\subsubsection{Aspetti positivi e negativi}
 		Molti sono stati riconosciuti dal gruppo come gli aspetti positivi di tale progetto:
@@ -115,7 +114,7 @@
 			\paragraph{Dominio tecnologico}
 			Per quanto riguarda il set di tecnologie da utilizzarsi, ItalianaSoftware richiede ai gruppi impegnati sul progetto:
 			\begin{itemize}
-			\item di sviluppare il front end della web application con l'ausilio della terna JavaScript, \gloss{HTML} e \gloss{CSS3};
+			\item di sviluppare il front end della web application con l'ausilio della terna JavaScript, HTML e CSS3;
 			\item di scegliere tra una base di dati \gloss{SQL} o \gloss{NoSQL} per quanto riguarda il database.
 			\end{itemize}
 			L'azienda suggerisce fortemente di utilizzare per la rappresentazione delle interfacce e per la creazione del marketplace
@@ -203,7 +202,7 @@
 				\item gli AWS come servizio per l'organizzazione di un server entro cui far operare l'applicativo;
 				\item \gloss{Django}, come framework in \gloss{Python} per la realizzazione del front-end dell'applicativo;
 				\item \gloss{PostgreSQL}, per la realizzazione del database di appoggio del software;
-				\item Librerie e framework quali \gloss{Bootstrap} e \gloss{React.js} per la creazione di interfacce utente, \gloss{hammer.js} e Yeoman;
+				\item Librerie e framework quali \gloss{Bootstrap} e \gloss{React.js} per la creazione di interfacce utente, hammer.js e Yeoman;
 				\item Html, Css e JavaScript per la realizzazione dell'interfaccia utente.
 			\end{itemize}
 		\subsubsection{Aspetti positivi e negativi}
@@ -243,7 +242,7 @@
 			\item l'utilizzo di un servizio di sintesi vocale, con consiglio per il motore di sintesi “Flexible and Adaptive Text-To-Speech”.
 			\end{itemize}
 			Nel caso si proceda allo sviluppo di un ebook reader, il proponente consiglia di utilizzare una libreria di terze parti preferibilmente 
-			\gloss{open source} per accedere al contenuto. Allo stesso modo, nel caso in cui si decida di estendere le funzionalità di un client di messaggistica, 
+			open source per accedere al contenuto. Allo stesso modo, nel caso in cui si decida di estendere le funzionalità di un client di messaggistica, 
 			si suggerisce di partire da uno già esistente, possibilmente open source.
 		\subsubsection{Aspetti positivi e negativi}
 		Tra le criticità è stato evidenziato il fatto che in tale capitolato ci sia da sviluppare un applicazione per dispositivi mobili.
