--- a/doc/Interni/Verbali/VI_16-12-20.tex
+++ b/doc/Interni/Verbali/VI_16-12-20.tex
@@ -26,7 +26,7 @@
 \end{description}
 Decisioni prese:
 \begin{itemize}
-\item scelto di realizzare un'\gloss{applicazione web} con \gloss{HTML5}, \gloss{CSS3} e \gloss{JavaScript} dal lato \gloss{client}, che genera codice \gloss{Java}; dopo varie proposte il dominio applicativo del software da realizzare è risultato “giochi da tavolo”;
+\item scelto di realizzare un'\gloss{applicazione web} con HTML5, CSS3 e JavaScript dal lato \gloss{client}, che genera codice Java; dopo varie proposte il dominio applicativo del software da realizzare è risultato “giochi da tavolo”;
 \item analizzato i casi d'uso generali che hanno fatto sorgere domande esposte il giorno seguente al \GP.
 \end{itemize}
 \end{document}
