--- a/doc/Interni/Verbali/VI_17-02-16.tex
+++ b/doc/Interni/Verbali/VI_17-02-16.tex
@@ -27,7 +27,7 @@
 Decisioni prese:
 \begin{itemize}
 \item utilizzare la libreria \jointjs{} per realizzare \gloss{editor} di diagrammi interattivi. Questo ha portato a utilizzare altre tecnologie correlate quali \html{}, \jquery{}, \lodash{} e \backbonejs{} che offre un'interfaccia RESTful;
-\item design pattern principali;
+\item \gloss{design pattern} principali;
 \item \proj{} sarà una single page application.
 \end{itemize}
 \end{document}
