--- a/doc/Interni/Verbali/VE_16-12-15.tex
+++ b/doc/Interni/Verbali/VE_16-12-15.tex
@@ -28,7 +28,7 @@
 Durante la riunione sono state discusse alcune scelte prese dal gruppo riguardanti le potenzialità del software e suggerite altre di nuove.
 Decisioni prese:
 \begin{itemize}
-\item abbiamo appurato che il dominio di programmi software che il nostro \gloss{editor} dovrà modellare dev'essere mirato ad un particolare ambiente applicativo; 
+\item abbiamo appurato che il dominio di programmi software che il nostro editor dovrà modellare dev'essere mirato ad un particolare ambiente applicativo; 
 \item linguaggio da usare e natura del software (\gloss{applicazione web} o desktop) liberi.
 \end{itemize}
 \end{document}
