--- a/doc/Interni/Verbali/VI_16-11-29.tex
+++ b/doc/Interni/Verbali/VI_16-11-29.tex
@@ -27,7 +27,7 @@
 
 Durante la riunione sono state prese le seguenti decisioni:
 \begin{itemize}
-\item il nome e il logo del gruppo e dopo varie proposte abbiamo scelto all'unanimità il nome \emph{Hivex}, dall'inglese \emph{hive} (la casetta delle \gloss{api}), dato che il nostro gruppo si compone di sei persone --- tante quanti i lati dell'esagono; inoltre Francis Bacon scriveva, nel \emph{Novum Organum},
+\item il nome e il logo del gruppo e dopo varie proposte abbiamo scelto all'unanimità il nome \emph{Hivex}, dall'inglese \emph{hive} (la casetta delle api), dato che il nostro gruppo si compone di sei persone --- tante quanti i lati dell'esagono; inoltre Francis Bacon scriveva, nel \emph{Novum Organum},
 \begin{quote}
 	The men of experiment are like the ant, they only collect and use; the reasoners resemble spiders, who make cobwebs out of their own substance. But the bee takes the middle course, it gathers its material from the flowers of the garden and field, but transforms and digests it by a power of its own.
 \end{quote}
