--- a/doc/Interni/Verbali/VI_17-01-02.tex
+++ b/doc/Interni/Verbali/VI_17-01-02.tex
@@ -27,7 +27,7 @@
 Decisioni prese:
 \begin{itemize}
 \item esposti i progressi sulla documentazione da tutti i membri del gruppo;
-\item deciso di utilizzare \gloss{Java} come linguaggio di programmazione per il lato server dell'applicativo da realizzare;
+\item deciso di utilizzare Java come linguaggio di programmazione per il lato server dell'applicativo da realizzare;
 \item analizzato tutti i requisiti da inserire nell'\AdR{} e le modifiche da apportare alla parte \gloss{PHP} di PragmaDB sull'esportazione del glossario in \gloss{Latex}.
 \end{itemize}
 \end{document}
