--- a/doc/Interni/Verbali/VI_17-02-24.tex
+++ b/doc/Interni/Verbali/VI_17-02-24.tex
@@ -20,9 +20,9 @@
 	\item[Orario] 09:30 - 13:30;
 	\item[Durata] 4 ore;
 	\item[Luogo incontro] Aula Lum250 via Luzzatti;
-	\item[Oggetto] analisi struttura server di \proj{};
+	\item[Oggetto] analisi struttura \gloss{server} di \proj{};
 	\item[Segretario] \LS; 
 	\item[Partecipanti] \ALL.
 \end{description}
-Durante la riunione sono stati analizzati gli aspetti principali dell'architettura lato server di \proj{}, in particolar modo sono state scelte i package e le classi da utilizzare.
+Durante la riunione sono stati analizzati gli aspetti principali dell'architettura lato server di \proj{}, in particolar modo sono state scelte i \gloss{package} e le classi da utilizzare.
 \end{document}
